# remap_manager

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: 00-defaults.yml
include/remap_manager/: remap_manager.hpp  semantic_remap_manager.hpp
launch/: remap_manager.launch.py
src/: remap_manager_node.cpp
src/remap_manager/: remap_manager.cpp  semantic_remap_manager.cpp
src/representation_manager/: semantic_representation_manager.cpp
