<?xml version="1.0"?>
<package format="3">
  <name>remap_manager</name>
  <version>0.0.0</version>
  <description>The remap plugins manager</description>

  <maintainer email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</maintainer>

  <license>Apache License 2.0</license>

  <author email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>remap_plugins</depend>
  <depend>remap_plugin_base</depend>
  <depend>vdb2pc</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
